# zruid

./: .gitignore  .gitmodules  Cargo.toml  build-api.sh
.github/workflows/: build.yml
src/: main.rs
zapi_gen/: README.md
zapi_gen/.openapi-generator/: FILES
zapi_gen/docs/: AddSubscriptionsResponse.md  AddSubscriptionsResponseAllOf.md  ApiKeyResponse.md  ApiKeyResponseAllOf.md  Attachments.md  AttachmentsMessages.md  AuthenticationApi.md  BadEventQueueIdError.md  BadEventQueueIdErrorAllOf.md  BasicBot.md  BasicBotAllOf.md  BasicBotBase.md  BasicStream.md  BasicStreamAllOf.md  BasicStreamBase.md  Bot.md  BotAllOf.md  CodedError.md  CodedErrorAllOf.md  CodedErrorBase.md  CodedErrorBaseAllOf.md  CustomProfileField.md  DefaultStreamGroup.md  EmojiReaction.md  EmojiReactionAllOf.md  EmojiReactionBase.md  EmojiReactionBaseUser.md  GetMessages.md  GetMessagesAllOf.md  Hotspot.md  (+35 more)
zdb/: Cargo.toml
zrest/: Cargo.toml  README.md
zrest/examples/: get.rs
zrest/src/: errors.rs  lib.rs
zrest/src/snapshots/: zrest__tests__loads-10.snap  zrest__tests__loads-11.snap  zrest__tests__loads-12.snap  zrest__tests__loads-13.snap  zrest__tests__loads-14.snap  zrest__tests__loads-15.snap  zrest__tests__loads-16.snap  zrest__tests__loads-2.snap  zrest__tests__loads-3.snap  zrest__tests__loads-4.snap  zrest__tests__loads-5.snap  zrest__tests__loads-6.snap  zrest__tests__loads-7.snap  zrest__tests__loads-8.snap  zrest__tests__loads-9.snap  zrest__tests__loads.snap  zrest__tests__loads.snap.new
zruid/: Cargo.toml
zruid/examples/: layout.rs  tab.rs
zruid/src/: main.rs  zdb.rs
(+69 files in other folders)
