[package]
name = "zrest"
version = "0.1.0"
authors = ["Nixon Enraght-Moony <nixon.emoony@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.1", features = ["json"] }
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.64"

[dev-dependencies]
tokio = { version = "1.2.0", features = ["rt", "macros"] }
