[package]
name = "zruid"
version = "0.1.0"
authors = ["Nixon Enraght-Moony <nixon.emoony@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = { version = "0.7.0", features = ["im"] }
futures = "0.3.13"
zrest = { path = "../zrest" }
tokio = { version = "1.2.0", features = ["rt-multi-thread"] }
